<resources>
    <string name="app_name">MalawiApp</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="tribes">Many of today’s Malawians are descendants of the Bantu people who moved across Africa and into Malawi for hundreds of years up to the fifteenth century. There is a rich cultural mix in Malawi with the Chewa being the most numerous tribe, at 34% of the population according to the 2018 census. Others include the Lomwe (19%), Yao (13%), Ngoni (10%) and Tumbuka (9%). Each tribe has contributed to the modern Malawi scene, whether it be in dress or dance or language. Masks are commonly used in various dances and ceremonies and these are usually tribe-specific, the best known being the Gule Wamkulu, performed by the Nyau of the Chewa. Traditional (African) doctors still attract many people and the two main ‘modern’ religions, Christianity and Islam, frequently exhibit a continuing adherence to traditional beliefs.</string>
    <string name="story">The History of Malawi covers the area of present-day Malawi. The region was once part of the Maravi Empire. In colonial times, the territory was ruled by the British, under whose control it was known first as British Central Africa and later Nyasaland.[1] It became part of the Federation of Rhodesia and Nyasaland. The country achieved full independence, as Malawi, in 1964. After independence, Malawi was ruled as a one-party state under Hastings Banda until 1994.</string>
    <string name="food">The cuisine of Malawi has not been influenced by many other cultures, and as a result, it has remained very traditional. There are many farmers in Malawi and the population grows much of the food. The country is known for its ‘tuck shops’, small shops found in rural areas that sell a variety of snack foods. These foods include meat pies, sausage rolls, bunny chow (rolls that have been deep fried and stuffed with a mix of curry meat and potato mix. Lake Malawi is not only a popular tourist destination, it is also a source of great fresh fish that is the country’s specialty.</string>
    <string name="history">In 1991 a hominid jawbone was discovered near Uraha village that was between 2.3 and 2.5 million years old.[2] Early humans inhabited the vicinity of Lake Malawi 50,000 to 60,000 years ago. Human remains at a site dated about 8000 BCE showed physical characteristics similar to peoples living today in the Horn of Africa. At another site, dated 1500 BCE, the remains possess features resembling San people. They might be responsible for the rock paintings found south of Lilongwe in Chencherere and Mphunzi.[citation needed] According to Chewa myth, the first people in the area were a race of dwarf archers which they called Akafula or Akaombwe.[3] Bantu-speaking people entered the region during the four first centuries of the "Common Era", bringing use of iron and slash-and-burn agriculture. Later waves of Bantu settlement, between the 13th and 15th centuries, displaced or assimilated the earlier Bantu and pre-Bantu populations.[4]</string>
    <string name="mount">The town of Mulanje lies along the M-2 highway from Thyolo to the west to the Mozambican border to the east. It is approximately 69 kilometres (43 mi), by road, south-east of Blantyre, the commercial and financial capital of Malawi.[3] This is approximately 380 kilometres (236 mi), by road, southeast of Lilongwe, the largest city in Malawi and the countrys capital.[4]</string>

    <string name="lake">Lake Malawi, also known as Lake Nyasa in Tanzania and Lago Niassa in Mozambique, is an African Great Lake and the southernmost lake in the East African Rift system, located between Malawi, Mozambique and Tanzania.
It is the fifth largest fresh water lake in the world by volume, the ninth largest lake in the world by area—and the third largest and second deepest lake in Africa. Lake Malawi is home to more species of fish than any other lake,[6] including at least 700 species of cichlids.[7] The Mozambique portion of the lake was officially declared a reserve by the Government of Mozambique on June 10, 2011,[8] while in Malawi a portion of the lake is included in Lake Malawi National Park.[6]
Lake Malawi is a meromictic lake, meaning that its water layers do not mix. The permanent stratification of Lake Malawis water and the oxic-anoxic boundary (relating to oxygen in the water) are maintained by moderately small chemical and thermal gradients.</string>

    <string name="football">Football is the most popular sport in Malawi. It is played by boys at all levels from makeshift village playfields to prep school league competition. Malawi fields a national football team. The countrys biggest success was a third place finish at the 1987 All-Africa Games. This was the last year national football teams were allowed to play in the All-Africa Games. Since 1991, only under-23 teams are allowed to play.[1]</string>

    <string name="netball">Netball has long been a popular sport for schoolgirls. Malawi is a full member of the International Federation of Netball Associations, and is currently ranked sixth internationally. The Malawi national netball team has put Malawi on the African map, qualifying for and coming first in regional tournaments such as the COSANA tournament. Malawi have competed at two Netball World Championships, and one Commonwealth Games. At the 2007 Netball World Championships, Malawi finished fifth beating strong teams such as Wales, Cooks Islands, and South Africa.
Malawis biggest sport achievement so far comes from Netball. The team earned a bronze medal at the 2016 Fast5 Netball World Series, the most important Fast5 netball tournament in the world. On continental level, Malawi earned the title of the 2012 Netball Africa Championship.[</string>

    <string name="national">Malawi is home to several national parks with a lot of wildlife, such as the zebras at Nyika National Park and the elephants at Liwonde National Park. Lake Malawi National Park in the South is a UNESCO heritage site and it has over a thousand species of fish and birds that are just unique to the warm heart of Africa. Located at Cape Maclear, Lake Malawi National park is the only Malawian national park that was opened to protect the biodiversity of unique fish and other aquatic species that it inhabits.</string>

    <string name="beach">Malawi has a variety of beaches where tourists can visit. Some of the most notable beaches on the shores of Lake Malawi include Kande Beach and Chintheche Inn in Nkhata Bay. Kande Beach is home to the Kande Horse Stables where tourists ride horses in the fresh waters of Lake Malawi. There are many lodges along the lake shore where tourists can also spend their time. Some of the accommodation facilities along the coasts of Lake Malawi include Makokola Retreat in Mangochi, Sunbird Livingstonia in Salima, and many more. While at the beaches along the coast of Lake Malawi, tourists can participate in various water sports including kayaking, parasailing, canoeing, snorkeling and water skiing or they could even go fishing.</string>


    <string name="chess">The game of skill is quite popular in Malawi. The International Chess Federation (FIDE) has registered more than 100 Malawian chess players. In 2019, Susan Namangale made Malawi proud by picking up a gold medal after a 12-year break. She won seven points out of the possible nine and got herself a chance to play in the 2020 World Chess Olympiad in Moscow.</string>

    <string name="basket">After independence, some US volunteers introduced basketball to Malawi, and many Malawians fell in love with the sport. Today, the game has become so popular to the extent of playing it professionally. It has also won the hearts of many sponsors who fund professional players and pay US-based coaches who come to the country to nurture raw talent and scout for the NBA and other top leagues. Players like Mphatso Gift Zilemba and Chimwemwe Jeremiah have caught the attention of foreign scouts, among them former NBA great Michael Jordan, and one of the 3 notorious gamblers of the NBA, alongside many others.</string>


    <string name="conference">Amaryllis Hotel Blantyre offers the perfect venue for any event, be it a conference, board meeting or lavish employee incentive. Our combination of elegance, luxury and cutting-edge technology in delivers extra-special experiences and memories to last a lifetime.  Our stunning hotel is proud of delivering extraordinary standards of guest care. Group bookings and special group rates are available throughout the year, and our guests enjoy an unforgettable experience in the hands of our professional and caring team.  A multitude of venue rooms - (sizes ranging from intimate 30 sq.m to a spacious 560 sq.m) - ideal for your Corporate Conference or Gala Dinner. Well Appointed - to cater for numbers from 3 to 800 plus. </string>


    <string name="gold">Blantyre is the oldest European settlement in Malawi. It is now known as the commercial capital of Malawi. Sunbird Mount Soche dominates the northern end of the city’s business centre. It is surrounded by banks and financial institutions, the headquarter offices of major corporations and retailers. The hotel is set among lush tropical gardens overlooking the city, Ndirande Mountain and the Chirimba Valley. Blantyre’s international airport is a comfortable 15 kilometres away.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="underline">Music of Malawi has historically been influenced through its triple cultural heritage of British, African, and American music.[citation needed] Malawians have long been travelers and migrant workers, and as a result, their music has spread across the African continent and blended with other music forms. One of the prime historical causes of the Malawian musical melting pot was World War II, when soldiers both brought music to distant lands and also brought them back. By the end of the war, guitar and banjo duos were the most popular type of dance bands. Both instruments were imported. Malawians working in the mines in South Africa and Mozambique also led to fusion and blending in music styles, giving rise to music styles like Kwela</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>