<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SportsFragment">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Football"
        android:textColor="#000"
        android:textStyle="italic"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/football"
        android:textAlignment="center"
        android:textColor="#000"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="@+id/textView10"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10">

        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:src="@drawable/football"/>

        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:src="@drawable/women"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Netball"
        android:textStyle="italic"
        android:textColor="#000"
        android:textSize="15sp"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="@id/linearLayout"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/netball"
        android:padding="5dp"
        android:textAlignment="center"
        android:layout_margin="10dp"
        android:textColor="#000"
        app:layout_constraintEnd_toEndOf="@+id/textView15"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:id="@+id/linearSports"
        app:layout_constraintEnd_toEndOf="@+id/textView16"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/textView16">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/team"
            android:layout_margin="10dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/netball"
            android:layout_margin="10dp"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chess"
        android:text="Chess"
        android:textSize="15sp"
        android:textColor="#000"
        android:textStyle="italic"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="@+id/linearSports"
        app:layout_constraintStart_toStartOf="@+id/linearSports"
        app:layout_constraintTop_toBottomOf="@+id/linearSports"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/chess"
        android:padding="5dp"
        android:layout_margin="10dp"
        android:id="@+id/chessPara"
        android:textColor="#000"
        app:layout_constraintEnd_toEndOf="@+id/chess"
        app:layout_constraintStart_toStartOf="@+id/chess"
        app:layout_constraintTop_toBottomOf="@+id/chess"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:id="@+id/linearSusan"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="@+id/chessPara"
        app:layout_constraintStart_toStartOf="@+id/chessPara"
        app:layout_constraintTop_toBottomOf="@+id/chessPara">
        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/susan"
            android:layout_weight="1"
            android:layout_margin="10dp"/>
        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/chessam"
            android:layout_weight="1"
            android:layout_margin="10dp"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BasketBall"
        android:id="@+id/basket"
        android:textColor="#000"
        android:textStyle="italic"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="@+id/linearSusan"
        app:layout_constraintStart_toStartOf="@+id/linearSusan"
        app:layout_constraintTop_toBottomOf="@+id/linearSusan"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/basket"
        android:id="@+id/basketPara"
        android:textColor="#000"
        android:textAlignment="center"
        android:padding="5dp"
        android:layout_marginTop="5dp"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="@+id/basket"
        app:layout_constraintStart_toStartOf="@+id/basket"
        app:layout_constraintTop_toBottomOf="@+id/basket"
        android:gravity="center_horizontal"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="5dp"
        android:id="@+id/linearBasket"
        app:layout_constraintEnd_toEndOf="@+id/basketPara"
        app:layout_constraintStart_toStartOf="@+id/basketPara"
        app:layout_constraintTop_toBottomOf="@+id/basketPara">
        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_weight="1"
            android:src="@drawable/basketball1"
            android:layout_margin="10dp"/>
        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_weight="1"
            android:src="@drawable/basketball2"
            android:layout_margin="10dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>